rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__pattern_rename_error_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "        ┌Pattern Rename────────────────────────────────────────────────┐        ",
        "        │Find:    a.txt                                                │        ",
        "        │Replace: b.txt                                                │        ",
        "        │[●] Regex (Alt+R) [○] Case (Alt+S) | s/f…epl/[gi] tr/from/to/ │        ",
        "        │[SIDE-BY-SIDE]  Preview  Original  (Alt+P)   Filter: MATCHES  │        ",
        "        │──────────────────────────────────────────────────────────────│        ",
        "        │√ a.txt                        ║ b.txt                        │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │                                                              │        ",
        "        │Name collision: b.txt                                         │        ",
        "        └──────────────────────────────────────────────────────────────┘        ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 23, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 3, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 69, y: 3, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 18, y: 4, fg: Black, bg: Yellow, underline: Reset, modifier: NONE,
        x: 69, y: 4, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 5, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 23, y: 6, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Yellow, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Red, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 71, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
