rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__pattern_rename_with_preview_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "            ┌Pattern Rename────────────────────────────────────────────────────────────────────────────────┐            ",
        "            │Find:    file                                                                                 │            ",
        "            │Replace: doc                                                                                  │            ",
        "            │[○] Regex (Alt+R) [○] Case (Alt+S) | s/find/repl/[gi] tr/from/to/                             │            ",
        "            │[SIDE-BY-SIDE]  Preview  Original  (Alt+P)   Filter: MATCHES  [All]  (Alt+A)                  │            ",
        "            │──────────────────────────────────────────────────────────────────────────────────────────────│            ",
        "            │√ file1.txt                                    ║ doc1.txt                                     │            ",
        "            │√ file2.txt                                    ║ doc2.txt                                     │            ",
        "            │╴ other.txt                                    ║ other.txt                                    │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │                                                                                              │            ",
        "            │ Matches: 2  Alt+R/S: regex/case  Enter: OK  Esc: cancel                                      │            ",
        "            └──────────────────────────────────────────────────────────────────────────────────────────────┘            ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 27, y: 4, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 22, y: 5, fg: Black, bg: Yellow, underline: Reset, modifier: NONE,
        x: 105, y: 5, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 5, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 22, y: 6, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 105, y: 6, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 7, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 27, y: 8, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 75, y: 8, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 80, y: 8, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 10, fg: Yellow, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 107, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 11, fg: Yellow, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 107, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 12, fg: Gray, bg: DarkGray, underline: Reset, modifier: NONE,
        x: 107, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 24, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 25, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 26, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 26, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 27, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 27, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 28, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 28, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 29, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 29, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 30, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 30, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 31, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 31, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 32, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 32, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 33, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 33, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 34, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 13, y: 34, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 107, y: 34, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 35, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 108, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
